--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1>Sebastian Cabezas</h1>
 				<p>Programador/Programador Web</p>
 				<div class="perfil">
-					<img class="imgyo" src="img/yo.png" alt="">
+					<img class="imgyo" src="img/yo.jpg" alt="">
 				</div>
 			</div>
 			<form action="">
