--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" href="img/logosebas.png">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
@@ -29,7 +30,6 @@
 				<a href="#">Páginas web</a>
 				<a href="#">Programas Java</a>
 				<a href="#">Programas C#</a>
-				<a href="#">Mis dibujos</a>
 			</div>
 		</header>
 
@@ -146,15 +146,6 @@
 				</div>
 			</div>
 		<!-- DIBUJOS -->
-			<div class="item"
-				 data-categoria="mis dibujos"
-				 data-etiquetas="dibujos"
-				 data-descripcion="Mikasa Ackerman"
-			>
-				<div class="item-contenido">
-					<img src="img/dibujo1.png" alt="">
-				</div>
-			</div>
 
 		</section>
 
