--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header>
 			<div class="logo">
 				<h1>Sebastian Cabezas</h1>
-				<p>Programador/Programador Web</p>
+				<p>Programador/Programador Web 💻</p>
 				<div class="perfil">
 					<img class="imgyo" src="img/yo.jpg" alt="">
 				</div>
@@ -36,6 +36,7 @@
 		<section class="grid" id="grid">
 
 		<!-- PAGINAS WEB -->
+			<!--PAGINA SUSHI-->
 			<div class="item" 
 				 data-categoria="páginas web"
 				 data-etiquetas="páginas web"
@@ -55,6 +56,78 @@
 					<img src="img/paginasushi2.png" alt="">
 				</div>
 			</div>
+			<!--PAGINA VIDEOJUEGOS-->
+			<div class="item" 
+				data-categoria="páginas web"
+				data-etiquetas="páginas web"
+				data-descripcion="<a class='btninfo' href='https://github.com/Seb-uwu/Sistema-de-inventario-y-ventas-de-videojuegos-en-PHP-HTML-CSS-y-MySQL' target='blank' >Más info</a>"
+		   >
+			   <div class="item-contenido">
+				   <img src="img/videojuegos1.png" alt="">
+			   </div>
+			</div>
+
+			<div class="item" 
+				data-categoria="páginas web"
+				data-etiquetas="páginas web"
+				data-descripcion="<a class='btninfo' href='https://github.com/Seb-uwu/Sistema-de-inventario-y-ventas-de-videojuegos-en-PHP-HTML-CSS-y-MySQL' target='blank' >Más info</a>"
+		   >
+			   <div class="item-contenido">
+				   <img src="img/videojuegos2.png" alt="">
+			   </div>
+			</div>
+
+			<div class="item" 
+				data-categoria="páginas web"
+				data-etiquetas="páginas web"
+				data-descripcion="<a class='btninfo' href='https://github.com/Seb-uwu/Sistema-de-inventario-y-ventas-de-videojuegos-en-PHP-HTML-CSS-y-MySQL' target='blank' >Más info</a>"
+		   >
+			   <div class="item-contenido">
+				   <img src="img/videojuegos3.png" alt="">
+			   </div>
+			</div>
+
+			<div class="item" 
+				data-categoria="páginas web"
+				data-etiquetas="páginas web"
+				data-descripcion="<a class='btninfo' href='https://github.com/Seb-uwu/Sistema-de-inventario-y-ventas-de-videojuegos-en-PHP-HTML-CSS-y-MySQL' target='blank' >Más info</a>"
+		   >
+			   <div class="item-contenido">
+				   <img src="img/videojuegos4.png" alt="">
+			   </div>
+			</div>
+
+			<div class="item" 
+				data-categoria="páginas web"
+				data-etiquetas="páginas web"
+				data-descripcion="<a class='btninfo' href='https://github.com/Seb-uwu/Sistema-de-inventario-y-ventas-de-videojuegos-en-PHP-HTML-CSS-y-MySQL' target='blank' >Más info</a>"
+		   >
+			   <div class="item-contenido">
+				   <img src="img/videojuegos5.png" alt="">
+			   </div>
+			</div>
+
+			<div class="item" 
+				data-categoria="páginas web"
+				data-etiquetas="páginas web"
+				data-descripcion="<a class='btninfo' href='https://github.com/Seb-uwu/Sistema-de-inventario-y-ventas-de-videojuegos-en-PHP-HTML-CSS-y-MySQL' target='blank' >Más info</a>"
+		   >
+			   <div class="item-contenido">
+				   <img src="img/videojuegos6.png" alt="">
+			   </div>
+			</div>
+
+			<div class="item" 
+				data-categoria="páginas web"
+				data-etiquetas="páginas web"
+				data-descripcion="<a class='btninfo' href='https://github.com/Seb-uwu/Sistema-de-inventario-y-ventas-de-videojuegos-en-PHP-HTML-CSS-y-MySQL' target='blank' >Más info</a>"
+		   >
+			   <div class="item-contenido">
+				   <img src="img/videojuegos7.png" alt="">
+			   </div>
+			</div>
+
+
 		<!-- PROGRAMAS JAVA-->
 			<div class="item"
 				 data-categoria="programas java"
